# SHIGOKU

./: .codeiumignore  .env.example  .gitignore  AGENTS.md  AGENTS.md-bak260604  CHANGELOG.md  Dockerfile  Dockerfile.phase-d  README.md  SHIGOKU開発プロンプト  docker-compose.phase-d.yml  docker-compose.yml  opencode.json  package-lock.json  pyproject.toml  pytest.ini
.codex/: config.toml  hooks.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
config/: external_tools.yaml  features.yaml  intervention_scenarios.yaml  notifications.yaml.example  shigoku.yaml  shigoku.yaml.example  tagging_rules.yaml  tools.yaml  vulnerabilities.yaml
data/: attack_chain_rules.json  task_prioritizer.py  vuln_roi_db.json  waf_signatures.json
recipes/: triage_simulate.yaml  visual_recon.yaml
reports/: 20251220_232006_6bfeb1bdc142_JWT_Authentication_Bypass_via_alg=none.md  haddix_cross_session_test.md  haddix_deferred_checklist_20260421_145749.md  haddix_report_20260319_013226.md  haddix_report_20260321_005804.md
rules/: cli-ops-routing.md  codingrules.md  lessons.md  python-tests.md  report-session-consistency.md  reporting.md  shigoku-docs.md  task-ledger.md
scripts/: attack_dvwa.py  audit_secrets.py  check_initial_release_gate.py  check_runtime_control_required_check.py  check_ssrf_pr_policy.py  create_shigoku_task.py  dvwa_security_matrix.py  generate_runtime_control_approval_evidence.py  generate_runtime_control_gate_evidence.py  get_dvwa_cookie.py  inspect_session_findings.py  observability_slo_rollup.py  phase_b_admin_test.py  phase_b_tagging.py  phase_c_coverage_executor.py  phase_c_cto_recommendations_test.py  review_observability_slo_weekly.py  run_fast_mc_recon_checks.sh  run_observability_slo_nightly.sh  run_phase_d_tests.sh  shigoku_ops_cli.py  smoke_test_juice_shop.py  ssrf_quality_rollback.py  sync_shigoku_updated_at.py  test_idor_hunter.py  test_phase_d_simple.py  validate_shigoku_docs.py  verify_caido_integration.py  verify_report_session_consistency.py  verify_session_loading.py  verify_upload.py
src/: __init__.py  __main__.py  config.py  legacy_prompts.py  main.py
tests/: conftest.py  e2e_full_flow_test.py  sample_proxy_log.json  test_advanced.py  test_audit_secrets.py  test_cli.py  test_cli_localization.py  test_core.py  test_ctf_mode.py  test_deephunter.py  test_fingerprint_integration.py  test_guardrails.py  test_integration.py  test_integration_phase0_3.py  test_mc_upload.py  test_notification.py  test_phase1_logging_project.py  test_phase5_security_tools.py  test_pii_masker.py  test_pipeline.py  test_tools.py  (+8 more)
(+1822 files in other folders)
